--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:h2:mem:ms1db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=ms1
 spring.datasource.password=admin
+
+server.port=8081
